# gst-dmtx

./: AUTHORS  ChangeLog  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure.ac  gst-dmtx-test-pipe.sh
m4/: Makefile.in
src/: Makefile.am  Makefile.in  gstdmtx.c  gstdmtx.h
